<resources>
    <string name="app_name">Final Project</string>
    <string name="WelcomeText">Welcome To GameTech</string>
    <string name="PlayerSelectionLabel">How Many Players</string>
    <string name="OnePlayer">One</string>
    <string name="TwoPlayer">Two</string>
    <string name="GameSelectionLabel">Select Game:</string>
    <string name="StartButton">START</string>
    <string name="UpperRightButton">\?</string>
    <string name="UpperCenterButton">\?</string>
    <string name="UpperLeftButton">\?</string>
    <string name="MiddleRightButton">\?</string>
    <string name="CenterButton">\?</string>
    <string name="MiddleLeftButtonId">\?</string>
    <string name="LowerLeftButton">\?</string>
    <string name="LowerCenterButton">\?</string>
    <string name="LowerRightButton">\?</string>
    <string name="PlayerLabel">Player 1 turn </string>
    <string-array name="games_array">
        <item>Tic Tac Toe</item>
    </string-array>
</resources>