<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.admin.finalproject.MainPage"
    android:background="@drawable/game_border"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/WelcomeTextId"
        android:layout_width="199dp"
        android:layout_height="59dp"
        android:text="@string/WelcomeText"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="47dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PlayerSelectionLabelId"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:text="@string/PlayerSelectionLabel"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/TwoPlayerRadioId"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/OnePlayerRadioId"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeTextId"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="49dp"
        app:layout_constraintLeft_toLeftOf="@+id/GameSelectionLabelId" />

    <RadioButton
        android:id="@+id/OnePlayerRadioId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="10dp"
        android:checked="false"
        android:text="@string/OnePlayer"
        app:layout_constraintBottom_toBottomOf="@+id/TwoPlayerRadioId"
        app:layout_constraintLeft_toLeftOf="@+id/PlayerSelectionLabelId"
        app:layout_constraintRight_toRightOf="@+id/GameSelectionLabelId"
        app:layout_constraintTop_toTopOf="@+id/TwoPlayerRadioId"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <RadioButton
        android:id="@+id/TwoPlayerRadioId"
        android:layout_width="75dp"
        android:layout_height="34dp"
        android:layout_marginBottom="129dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="131dp"
        android:checked="true"
        android:text="@string/TwoPlayer"
        app:layout_constraintBottom_toBottomOf="@+id/GamesSpinnerId"
        app:layout_constraintLeft_toRightOf="@+id/GameSelectionLabelId"
        app:layout_constraintTop_toTopOf="@+id/WelcomeTextId"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Spinner
        android:id="@+id/GamesSpinnerId"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@android:drawable/btn_dropdown"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/StartButtonId"
        android:layout_marginStart="7dp"
        android:layout_marginTop="49dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="46dp"
        app:layout_constraintLeft_toLeftOf="@+id/GameSelectionLabelId"
        app:layout_constraintTop_toTopOf="@+id/GameSelectionLabelId" />

    <TextView
        android:id="@+id/GameSelectionLabelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GameSelectionLabel"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/StartButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/StartButton"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>
